# emerald-backend

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  test_output.txt  test_results.txt
.claude/analysis/: README.md  SUMMARY.md  architecture_diagrams.md  codebase_analysis.md
.claude/best-practices/: database-entry-creation-flow.md  database-entry-update-flow.md  entity-schemas-guide.md  entity-search-guide.md
.claude/commands/: instruct-summary.md  new-implementation.md  new-plan.md  new-research.md
.claude/standards/: backend.md
.features/descriptions/: 20251027_project-initialization.md  account-extra-details.md  admin-creation-support.md  enhancements.md  feat-001-review-codebase.md  feat-002-remove-roles.md  feat-01-financial-institutions.md  feat-02-account-types.md  feat-03-link-accounts-to-institutions.md  feat-04-convert-account-types.md  feat-05-cards.md  feat-05-payment-methods.md  feat-06-link-transactions-to-cards.md  feat-06-link-transactions-to-payment-methods.md  feat-07-enhanced-transaction-metadata.md  feat-08-taxonomy-system.md  feat-09-taxonomy-terms.md  feat-10-transaction-classification.md  feat-11-budget-tracking.md  feat-12-remove-color-fields.md  feat-13-remove-transaction-tags.md  feat-14-remove-transaction-type.md  feature-class-oriented.md  hexagonal-architecture.md  hotfix-global-variables.md  (+6 more)
alembic/: env.py
docs/: database-future-schema.md  database-improvements-proposal.md  database-schema.md
src/: exceptions.py  main.py  middleware.py
tests/: conftest.py
(+282 files in other folders)
