[project]
name = "emerald-backend"
version = "0.1.0"
description = "Emerald Personal Finance Platform - Backend API"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Emerald Team" }
]
dependencies = [
    "alembic>=1.13.0",
    "argon2-cffi>=23.1.0",
    "asyncpg>=0.29.0",
    "cryptography>=41.0.0",
    "fastapi[standard]>=0.115.0",
    "pydantic>=2.9.0",
    "pydantic-extra-types>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "python-json-logger>=4.0.0",
    "python-multipart>=0.0.6",
    "redis>=5.0.0",
    "schwifty>=2023.11.0",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio]>=2.0.0",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[tool.ruff]
# Ignore F821 (undefined name) in model files for SQLAlchemy forward references
[tool.ruff.lint.per-file-ignores]
"src/models/*.py" = ["F821"]

[tool.mypy]
strict = true

# Ignore missing type hints for specific libraries
[[tool.mypy.overrides]]
module = "jose.*"
ignore_missing_imports = true
